[tool.poetry]
name = "hw13-1"
version = "0.1.0"
description = ""
authors = ["Pavel Golubinec <7respawnables7@gmail.com>"]
readme = "README.md"
packages = [{include = "hw13"}]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
pytest = "^8.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
